[project]
name = "pytorchlearning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch",
    "torchaudio",
    "torchvision",
]

[tool.uv.sources]
torch = { path = "install/torch-2.3.0+cu118-cp312-cp312-win_amd64.whl" }
torchaudio = { path = "install/torchaudio-2.3.0+cu118-cp312-cp312-win_amd64.whl" }
torchvision = { path = "install/torchvision-0.18.0+cu118-cp312-cp312-win_amd64.whl" }
